# rawr-ebooks

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile.am  README.md  config-example.yml  configure.ac  ebooks.cpp  emoticons.txt  freevars.cpp  freevars.h  gen.cpp  histogram.cpp  histogram.h  kgramstats.cpp  kgramstats.h  main.cpp  malaprop.cpp  malaprop.h  timeline.cpp  timeline.h
